--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,9 @@
 [project]
 name = "fastapi-tutorial"
 version = "0.1.0"
-description = "Add your description here"
+description = "following fastapi tutorial for 김세연"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.129.0",
+]
