--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     command: >
       sh -c "
         uv sync &&
-        uv run main.py
+        uv run fastapi dev app/main.py --host 0.0.0.0
       "
     ports:
       - "8000:8000"
@@ -32,7 +32,7 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://postgres:password@postgres:5432/fastapi
+      DATABASE_URL: postgresql+psycopg://postgres:password@postgres:5432/fastapi
 
 volumes:
   postgres_data:
